fix spacing of next buttons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,6 +55,22 @@
     color: red;
   }
 
+  #container {
+    min-height: 10%;
+    /*width: 300px;
+   height: 300px;*/
+   overflow: hidden;
+   /*margin: auto;*/
+   position: relative;
+  }
+
+  #footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    background:#6cf;
+  }
+
   /*.page-nav {
     text-align: center;
   }*/
